added ActiveEntity and SilentEntity

--- a/mapsite.html
+++ b/mapsite.html
@@ -73,7 +73,18 @@
               <h3 class="panel-title">Unidentifyed Entities</h3>
             </div>
             <div class="panel-body">
-              Panel content
+              <table id="unknown" class="table table-condensed table-striped">
+                <tr>
+                  <th>URI</th>
+                </tr>
+                <!--
+                <tr>
+                  <td>1</td>
+                  <td>Test</td>
+                  <td>Test</td>
+                </tr>
+                -->
+              </table>
             </div>
           </div>  
         </div>
